--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="shortcut icon" href="./assets/images/.png" type="image/x-icon" />
     <title>Elon's Family - Home</title>
+    <meta
+      name="description"
+      content="ElonFamily is a memetoken based of the immortal elon narrative. So far there were dogs, relatives, robots & even his tweets.
+In a world drowning in elontokens we offer you a safe haven.
+ElonFamily aims to be a community owned token with a little kickstart."
+    />
   </head>
   <body>
     <header class="container-fluid p-2" id="header">
@@ -25,7 +31,6 @@
           <ul class="d-flex gap-4">
             <li><a href="#hero">home</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="#tokenomics">tokenomics</a></li>
           </ul>
         </div>
         <a href="" class="home-btn">buy now</a>
@@ -50,7 +55,7 @@
               data-aos-easing="linear"
               data-aos-duration="2500"
             >
-              EWhy trying to hold each of Elons family members on its own, when
+              Why trying to hold each of elons family members on its own, when
               you can get them all together!
             </p>
             <div class="d-flex gap-3 flex-wrap mt-3">
@@ -83,11 +88,13 @@
 
             <div class="col-md-6">
               <h3 class="head">about us</h3>
-              <h1 class="title">Accelerating The World's Economic Evolution</h1>
+              <h1 class="title">The Immortal Elon Narrative</h1>
               <p class="info">
-                Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed
-                do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit
-                amet, labore et.Lorem ipsum dolor sit amet.
+                ElonFamily is a memetoken based of the immortal elon narrative.
+                So far there were dogs, relatives, robots & even his tweets. In
+                a world drowning in elontokens we offer you a safe haven.
+                ElonFamily aims to be a community owned token with a little
+                kickstart.
               </p>
               <a href="" class="buy-btn mt-3">buy now</a>
             </div>
@@ -100,39 +107,34 @@
           <h1 class="title">our tokenomics</h1>
           <div class="row mt-5 justify-content-between row-gap-5">
             <div
-              class="col-md-3 d-flex flex-column gap-1 justify-content-center align-items-center"
+              class="col-md-5 col-lg-4 d-flex flex-column gap-1 justify-content-center align-items-center"
             >
-              <img src="./assets/images/buy.svg" alt="buy-icon" />
-              <h3 class="title text-center">
-                Unique Transaction Fee Structure
-              </h3>
+              <img src="./assets/images/tax.svg" alt="buy-icon" />
+              <h3 class="title text-center">4% Initial Tax</h3>
               <p class="text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-                corrupti.
+                ElonFamily's ($EFAM) tokenomics feature a 4% tax split between
+                marketing and team costs, eventually transitioning to a fully
+                community-owned model with 0% tax.
               </p>
             </div>
             <div
               class="col-md-3 d-flex flex-column gap-1 justify-content-center align-items-center"
             >
-              <img src="./assets/images/buy.svg" alt="buy-icon" />
-              <h3 class="title text-center">
-                Unique Transaction Fee Structure
-              </h3>
+              <img src="./assets/images/marketing.svg" alt="buy-icon" />
+              <h3 class="title text-center">2% Marketing</h3>
               <p class="text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-                corrupti.
+                ElonFamily allocates 2% tax for marketing expenses, promoting
+                wider awareness and community engagement.
               </p>
             </div>
             <div
               class="col-md-3 d-flex flex-column gap-1 justify-content-center align-items-center"
             >
-              <img src="./assets/images/buy.svg" alt="buy-icon" />
-              <h3 class="title text-center">
-                Unique Transaction Fee Structure
-              </h3>
+              <img src="./assets/images/team.svg" alt="buy-icon" />
+              <h3 class="title text-center">2% Team</h3>
               <p class="text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-                corrupti.
+                ElonFamily reserves 2% tax for team expenses, covering
+                compensation and operational costs.
               </p>
             </div>
           </div>
