--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@ ElonFamily aims to be a community owned token with a little kickstart."
               you can get them all together!
             </p>
             <div class="d-flex gap-3 flex-wrap mt-3">
-              <a href="https://twitter.com/" target="_blank" class="hero-btn"
+              <a
+                href="https://twitter.com/ElonFamilyERC20?t=Tq7-i9Jfim6Dfbcvpj1ykg&s=09"
+                target="_blank"
+                class="hero-btn"
                 >twitter</a
               >
-              <a href="https://t.me/" target="_blank" class="hero-btn"
+              <a href="https://t.me/EFamErc" target="_blank" class="hero-btn"
                 >telegram community</a
               >
             </div>
@@ -160,10 +163,12 @@ ElonFamily aims to be a community owned token with a little kickstart."
             </ul>
           </div>
           <div class="col-md-2 d-flex flex-wrap gap-4 justify-content-center">
-            <a href="https://twitter.com/" target="_blank"
+            <a
+              href="https://twitter.com/ElonFamilyERC20?t=Tq7-i9Jfim6Dfbcvpj1ykg&s=09"
+              target="_blank"
               ><img src="./assets/images/twitter.svg" alt="twitter icon"
             /></a>
-            <a href="https://t.me/"
+            <a href="https://t.me/EFamErc"
               ><img src="./assets/images/telegram.svg" alt="telegram icon"
             /></a>
           </div>
